// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFilters does not render aggregations when numberOfResults is 0 1`] = `""`;

exports[`AggregationFilters does not render aggregations with empty buckets 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className="mb4"
    gutter={32}
    key="agg1"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {},
          ]
        }
        initialBuckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 1"
        onChange={[Function]}
      />
    </EventTracker>
  </Col>
</Row>
`;

exports[`AggregationFilters renders aggregations when numberOfResults is 0 and displayWhenNoResults is true 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className="mb3"
    gutter={32}
    key="agg"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Jessica Jones"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 0,
            },
          ]
        }
        name="Jessica Jones"
        onChange={[Function]}
      />
    </EventTracker>
  </Col>
</Row>
`;

exports[`AggregationFilters renders with all props set [inline] 1`] = `
<Row
  className="bg-white pv3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className="md-pb3"
    gutter={32}
    key="agg1"
    lg={5}
    xs={24}
  >
    <EventTracker
      eventId="Facet-[Range] Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="range"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        initialBuckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="[Range] Aggregation 1"
        onChange={[Function]}
        selections="foo"
      />
    </EventTracker>
  </Col>
  <Col
    className="md-pb3"
    gutter={32}
    key="agg2"
    lg={5}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 2"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_2",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 2"
        onChange={[Function]}
        splitDisplayName={true}
      />
    </EventTracker>
  </Col>
</Row>
`;

exports[`AggregationFilters renders with all props set 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className="mb4"
    gutter={32}
    key="agg1"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-[Range] Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="range"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        initialBuckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="[Range] Aggregation 1"
        onChange={[Function]}
        selections="foo"
      />
    </EventTracker>
  </Col>
  <Col
    className="mb4"
    gutter={32}
    key="agg3"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 3"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        bucketHelp={
          Immutable.Map {
            "published": Immutable.Map {
              "text": "Published papers are believed to have undergone rigorous peer review.",
              "link": "https://inspirehep.net/info/faq/general#published",
            },
          }
        }
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_3",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 3"
        onChange={[Function]}
        splitDisplayName={true}
      />
    </EventTracker>
  </Col>
  <Col
    className="mb3"
    gutter={32}
    key="agg2"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 2"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_2",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 2"
        onChange={[Function]}
        splitDisplayName={true}
      />
    </EventTracker>
  </Col>
</Row>
`;
